--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React Challenge for Churrasco"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +29,7 @@
     <!-- MAPBOX CDN -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 
-    <title>React App</title>
+    <title>Travel with Churrasco!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
